# SkillDance

./: .gitignore  README.md  main.py  pyproject.toml
analyzer/: env.py  security matrix.md
analyzer/skills_security_matrix/: __init__.py  cli.py  discrepancy.py  matrix_loader.py  models.py  risk_mapping.py  skill_discovery.py  skill_structure.py
analyzer/skills_security_matrix/evidence/: declaration.py  implementation.py
analyzer/skills_security_matrix/exporters/: csv_exporter.py  json_exporter.py
analyzer/skills_security_matrix/review/: __init__.py  fallback.py  llm_provider.py  llm_reviewer.py  models.py  review_policy.py
analyzer/skills_security_matrix/rules/: candidate_builder.py  catalog.py  declaration_rules.py  implementation_rules.py
analyzer/skills_security_matrix/validation/: goldset.py
crawling/security_infos/openclaw/: crawl_clawhub_security_to_sqlite.py
docs/analyzer/: skills-security-matrix-analyzer.md
docs/brainstorms/: flask-skill-repo-scan-web-requirements.md  skills-security-matrix-analyzer-requirements.md
docs/plans/: 2026-03-25-001-feat-skills-security-matrix-analyzer-plan.md  2026-03-27-001-feat-extend-skills-security-matrix-analyzer-plan.md  2026-04-02-001-feat-add-flask-skill-repo-scan-web-plan.md
scripts/: render_skills_security_html.py  run_single_skill_from_skills_sh.py
web/: README.md  app.py
web/services/: __init__.py  repo_fetcher.py  result_loader.py  scan_runner.py  skill_locator.py
web/static/: app.css
web/templates/: base.html  choose_skill.html  index.html  result.html
(+7 files in other folders)
